--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,7 +14,8 @@
     "lib"
   ],
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "start": "nodemon ./server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
