--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,7 +17,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "socket.io-client": "^3.1.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
